--- a/src/less/BzFTMxc.less
+++ b/src/less/BzFTMxc.less
@@ -51,6 +51,12 @@ html, body{
     }
 }
 
+.highlight{
+    background: #000;
+    color: #FFF;
+    padding: 3px 12px;
+}
+
 #whoami{
 
     img.portrait{
@@ -144,7 +150,7 @@ html, body{
 	top: 0%;
 	left: 0%;
 	width: 100%;
-	height: 140px;
+	height: 135px;
 
 	&.short{
 	    height: 100px;
@@ -310,7 +316,7 @@ html, body{
 .section{
     float: left;
     width: 100%;
-    margin: 20px 0px;
+    margin: 10px 0px;
 
     @media print{
 	margin: 10px 0px;
@@ -442,4 +448,79 @@ ul.journey{
 	    }
 	}
     }
+}
+
+ul.education{
+    list-style: none;
+    float: left;
+    width: 100%;
+    padding: 5px 0px;
+
+    li{
+	float: left;
+	width: 100%;
+	padding: 10px 0px;
+    }
+
+    .learning{
+	float: left;
+	width: 100%;
+
+	.year{
+	    font-weight: 600;
+	    font-style: italic;
+	    font-size: 10pt;
+	}
+
+	.course{
+	    font-size: 11pt;
+	    font-weight: 100;
+	    font-style: italic;
+	    color: #333;
+	    margin: 2px 0px;
+
+	    .field{
+		color: #555;
+	    }
+	}
+
+	.institution{
+	    font-size: 9pt;
+	    color: #777;
+	    font-weight: 100;
+	}
+    }
+}
+
+div#interests{
+    float: left;
+    width: 50%;
+}
+
+ul.interests{
+    list-style: none;
+    margin: 50px 0px;
+
+    li{
+	float: left !important;
+	margin: 3px 5px;
+	font-size: 9pt;
+	background: #F7F7F7;
+	color: #333;
+	padding: 3px 8px;
+
+	&.int{
+	    background: #EEE;
+	    color: #111;
+	}
+	&.pro{
+	    background: #DDD;
+	    color: #000;
+	}
+    }
+}
+
+div#interests-chart{
+    float: left;
+    width: 50%;
 }
