--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -38,6 +38,38 @@ html
                                                 .block.dashed.large
                                                         .left
                                                                 .time Today
+                                                                .section
+                                                                        h4.highlight.skew.title
+                                                                                span.unskew Areas Of Interest
+                                                                        #interests
+                                                                                ul.interests
+                                                                                        li.pro Flask
+                                                                                        li.int Hadoop
+                                                                                        li.int Spark
+                                                                                        li.pro Scrapy
+                                                                                        li.beg RabbitMQ
+                                                                                        li.int Kafka
+                                                                                        li.beg Storm
+                                                                                        li.pro AngularJS
+                                                                        #interests-chart
+                                                                .section
+                                                                        h4.skew.highlight.title
+                                                                                span.unskew Education
+                                                                        ul.education
+                                                                                li
+                                                                                        .learning
+                                                                                                .year 2016
+                                                                                                .course
+                                                                                                        | Bachelor Of Technology 
+                                                                                                        span.field  &#124; Computer Science &amp; Engineering
+                                                                                                .institution Guru Nanak Dev Engineering College
+                                                                                li
+                                                                                        .learning
+                                                                                                .year 2013
+                                                                                                .course
+                                                                                                        | Diploma In Engineering 
+                                                                                                        span.field &#124; Computer Engineering
+                                                                                                .institution Punjab State Board Of Technical Education
                                                         .right
                                                                 b I want to join your team.
                                                                 .content
@@ -62,7 +94,8 @@ html
                                                                                                         .image.square(style='background-image: url("assets/img/job.png")')
                                                                                                         b For Hire
                                                                 .section
-                                                                        h4.title Technology Experience
+                                                                        h4.highlight.skew.title
+                                                                                span.unskew Technology Experience
                                                                         .sub-section
                                                                                 b.title Language
                                                                                 ul.technologies
@@ -175,7 +208,7 @@ html
                                                                 .content
                                                                         h3 SmartC - Infinilytics
                                                                         strong Insurance fraud detection solution
-                                                                        a(target='_blank', href='https://www.infinilytics.com/illustrations/') https://www.infinilytics.com/smartc/
+                                                                        a(target='_blank', href='http://www.infinilytics.com/illustrations/') http://www.infinilytics.com/smartc/
                                                                         p
                                                                                 | Technology partnership with Infinilytics; developers of patented solution for insurance fraud detection.
                                                                                 | Lead the offshore development and successfully served two clients for Infinilytics. Also; deployed and maintained HIPAA compliant infrastructure at workplace.
@@ -197,7 +230,7 @@ html
                                                                 .time Nov '15
                                                                 .content
                                                                         h3 Xenonify - IoT Platform
-                                                                        a(target='_blank', href='https://xenonify.com') https://xenonify.com
+                                                                        a(target='_blank', href='http://xenonify.com') http://xenonify.com
                                                                         p
                                                                                 | As our team grew; we looked for opportunities within our market. We developed an IoT SaaS platform specifically to serve the upcoming needs of our clients.
                                                                                 | I played an important role in architecture and implementation of the solution. Successfully served client; working for efficient power utilization.
@@ -241,7 +274,7 @@ html
                                                                         h3
                                                                                 | Co-founded 
                                                                                 b XenonStack
-                                                                        a(target='_blank', href='https://xenonstack.com') https://xenonstack.com
+                                                                        a(target='_blank', href='http://xenonstack.com') http://xenonstack.com
                                                                         p As I demonstrated proficient develoment skills; I got pulled to a new setup for big data and cloud slolution consulting. We collaborated to serve our first client; a telecom provider for analysing call data records in real-time and optimize billing components. Later, I lead the team as CTO and architect for big data solutions.
                                                         .right &nbsp;
                                                 .block.dashed
@@ -254,4 +287,11 @@ html
                                                                                 | Developer
                                                                         p I had an interesting life as a freelance developer. I started by exploring technologies of the time and working for free at early stage. Finally got my first paid project in 2012. With excellent repeat hire rate; I developed several ERP solutions and online versions for various magazines and newspapers.
 
+                                section#footer
+                                        .quote The best or nothing
+                                        .note Press CTRL+P and Save As PDF
+
+                script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts.js')
+                script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts-more.js')
+                script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/js/modules/solid-gauge.js')
                 script(type="text/javascript", src="assets/js/BzFTMxc.min.js")
