--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -38,6 +38,7 @@ html
                                                 .block.dashed.large
                                                         .left
                                                                 .time Today
+                                                                .space
                                                                 .section
                                                                         h4.highlight.skew.title
                                                                                 span.unskew Areas Of Interest
@@ -72,6 +73,7 @@ html
                                                                                                 .institution Punjab State Board Of Technical Education
                                                         .right
                                                                 b I want to join your team.
+                                                                .space
                                                                 .content
                                                                         p My idea of profession is to work for my passion. My passion for innovation, passion for computers, and yes passion for business co-define the terms on which I live.
                                                                 .section
@@ -289,7 +291,7 @@ html
 
                                 section#footer
                                         .quote The best or nothing
-                                        .note Press CTRL+P and Save As PDF
+                                        .note.no-print Press CTRL+P and Save As PDF
 
                 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts.js')
                 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts-more.js')
