--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,7 +9,6 @@ html
                         .page
 
                                 section#whoami.wrapper
-                                        img.portrait(src='assets/img/portrait.jpg')
                                         .greeting
                                                 h3
                                                         span.highlight.skew
@@ -30,9 +29,12 @@ html
                                                 a(href='https://BzFTMxc.github.io')
                                                         img(src='assets/img/link.png')
                                                         | https://BzFTMxc.github.io
-                                                a(href='bitcoin:3124b234g2hg2h')
-                                                        img(src='assets/img/btc.png')
-                                                        | 354b3j5g34kj4g
+                                                a(href='#')
+                                                        img(src='assets/img/call.png')
+                                                        | (+91) 9 478 478 470
+                                                a(href='mailto:aroraabhay@icloud.com')
+                                                        img(src='assets/img/mail.png')
+                                                        | aroraabhay@icloud.com
                                 section#timeline.wrapper
                                         .timeline
                                                 .block.dashed.large
@@ -291,7 +293,9 @@ html
 
                                 section#footer
                                         .quote The best or nothing
-                                        .note.no-print Press CTRL+P and Save As PDF
+                                        .note
+                                                |  Have an opportunity? Contact information is available at top. 
+                                                span.no-print Press CTRL+P and save As PDF.
 
                 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts.js')
                 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts-more.js')
