--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -46,14 +46,15 @@ html
                                                                                 span.unskew Areas Of Interest
                                                                         #interests
                                                                                 ul.interests
-                                                                                        li.pro Flask
-                                                                                        li.int Hadoop
-                                                                                        li.int Spark
-                                                                                        li.pro Scrapy
-                                                                                        li.beg RabbitMQ
-                                                                                        li.int Kafka
-                                                                                        li.beg Storm
-                                                                                        li.pro AngularJS
+                                                                                        li.pro Data Engineering
+                                                                                        li.beg AR &amp; VR
+                                                                                        li.int Blockchain Development
+                                                                                        li.int Big Data
+                                                                                        li.beg Analytics
+                                                                                        li.pro
+                                                                                                | IoT 
+                                                                                                span.no-print Software Infrastructure
+                                                                                        li.int Bots &amp; AI
                                                                         #interests-chart
                                                                 .section
                                                                         h4.skew.highlight.title
@@ -160,7 +161,7 @@ html
                                                                 .time Aug '17
                                                                 .content
                                                                         h3 PNIMaps (Prototype)
-                                                                        a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
+                                                                        a(target='_blank', href='https://github.com/BzFTMxc/pni-maps') https://github.com/BzFTMxc/pni-maps
                                                                         p                                    
                                                                                 | Physical network inventory management and network analysis through Google Maps based interface.
                                                                                 | Developed a prototype to demonstrate how javascript can be used to render spatial data and manipulate directly on map.
@@ -292,7 +293,7 @@ html
                                                                         p I had an interesting life as a freelance developer. I started by exploring technologies of the time and working for free at early stage. Finally got my first paid project in 2012. With excellent repeat hire rate; I developed several ERP solutions and online versions for various magazines and newspapers.
 
                                 section#footer
-                                        .quote The best or nothing
+                                        .quote Remember that sometimes not getting what you want is a wonderful stroke of luck.
                                         .note
                                                 |  Have an opportunity? Contact information is available at top. 
                                                 span.no-print Press CTRL+P and save As PDF.
