--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -293,7 +293,7 @@ html
                                                                         p I had an interesting life as a freelance developer. I started by exploring technologies of the time and working for free at early stage. Finally got my first paid project in 2012. With excellent repeat hire rate; I developed several ERP solutions and online versions for various magazines and newspapers.
 
                                 section#footer
-                                        .quote Remember that sometimes not getting what you want is a wonderful stroke of luck.
+                                        .quote When we are no longer able to change a situation, we are challenged to change ourselves.
                                         .note
                                                 |  Have an opportunity? Contact information is available at top. 
                                                 span.no-print Press CTRL+P and save As PDF.
