--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -17,11 +17,11 @@ html
                                                 h1 Abhay Arora
                                         .highlights
                                                 span.highlight.skew
-                                                        span.unskew freelancer
+                                                        span.unskew data engineering
                                                 span.highlight.skew
-                                                        span.unskew software architect
+                                                        span.unskew intelligent bots
                                                 span.highlight.skew
-                                                        span.unskew data engineer
+                                                        span.unskew blockchain &amp; smart contracts
                                         .links
                                                 a(href='https://github.com/BzFTMxc')
                                                         img(src='assets/img/gh.png')
@@ -47,10 +47,12 @@ html
                                                                         #interests
                                                                                 ul.interests
                                                                                         li.pro Data Engineering
-                                                                                        li.beg AR &amp; VR
-                                                                                        li.int Blockchain Development
-                                                                                        li.int Big Data
                                                                                         li.beg Analytics
+                                                                                        li.int
+                                                                                                | Blockchain 
+                                                                                                span.no-print Development
+                                                                                        li.int Big Data
+                                                                                        li.beg Smart Contracts
                                                                                         li.pro
                                                                                                 | IoT 
                                                                                                 span.no-print Software Infrastructure
@@ -92,10 +94,6 @@ html
                                                                                                         b Co-founder CTO
                                                                                         li
                                                                                                 .milestone
-                                                                                                        .image.square(style='background-image: url("assets/img/infosys.jpg")')
-                                                                                                        b Employee
-                                                                                        li
-                                                                                                .milestone
                                                                                                         .image.square(style='background-image: url("assets/img/job.png")')
                                                                                                         b For Hire
                                                                 .section
@@ -105,11 +103,10 @@ html
                                                                                 b.title Language
                                                                                 ul.technologies
                                                                                         li.pro Python
-                                                                                        li.int Golang
+                                                                                        li.int Go
                                                                                         li.pro JavaScript
-                                                                                        li.beg Scala
-                                                                                        li.int C
-                                                                                        li.beg Java
+                                                                                        li.int C/C++
+                                                                                        li.beg Solidity
                                                                         .sub-section
                                                                                 b.title Framework & Utility
                                                                                 ul.technologies
@@ -120,17 +117,16 @@ html
                                                                                         li.beg RabbitMQ
                                                                                         li.int Kafka
                                                                                         li.beg Storm
-                                                                                        li.pro AngularJS
-                                                                                        li.int D3.JS
-                                                                                        li.beg Django
-                                                                                        li.beg Akka
-                                                                                        li.int Hadoop Ecosystem Tools
-                                                                                        li.beg ReactJS
-                                                                                        li.beg Finatra
+                                                                                        li.int Angular.js
+                                                                                        li.int D3.js
+                                                                                        li.beg React.js
+                                                                                        li.int Tensorflow
+                                                                                        li.beg OpenCV
+                                                                                        li.int Ethereum
+                                                                                        li.beg Hyperledger
                                                                         .sub-section
                                                                                 b.title Storage &amp; Search
                                                                                 ul.technologies
-                                                                                        li.int Alluxio
                                                                                         li.pro MongoDB
                                                                                         li.pro MySQL
                                                                                         li.pro PostgreSQL
@@ -144,9 +140,11 @@ html
                                                                         .sub-section
                                                                                 b.title Workflow &amp; Deployment
                                                                                 ul.technologies
+                                                                                        li.int Lambda
+                                                                                        li.pro Serverless
                                                                                         li.int Docker
                                                                                         li.pro Openstack
-                                                                                        li.int AWS Cloud
+                                                                                        li.int AWS
                                                                                         li.pro Jenkins
                                                                                         li.pro Git
                                                                                         li.int Slack
@@ -173,7 +171,7 @@ html
                                                                                 li GeoJSON
                                                                                 li JavaScript
                                                                                 li Python
-                                                                                li AngularJS
+                                                                                li Angular.js
                                                                                 li Flask
                                                         .right &nbsp;
                                                 .block.solid
@@ -182,10 +180,10 @@ html
                                                                 .time Oct '16
                                                                 .content
                                                                         h3
-                                                                                | Joined 
-                                                                                b Infosys
-                                                                        p Being an important part; leaving XenonStack was never an option. With conflicting opinion on products and strategy; pertaining from long time; I decided to leave the team for good.
-                                                                        p With a campus placement offer letter (from the past) still available at the time; I called HR at Infosys to get myself placed in the team.
+                                                                                | Left 
+                                                                                b XenonStack
+                                                                        p Being an important part; leaving XenonStack was never an option. With conflicting opinion on products and strategy; pertaining from long time; I decided to leave the team for good. 
+                                                                        p I started again as an individual consultant; working on freelance projects in back-end development, blockchain, intelligent bot development, data engineering and machine learning.
                                                 .block
                                                         .left
                                                                 .time Aug '16
@@ -204,7 +202,6 @@ html
                                                                                 li D3.js
                                                                                 li Neo4J
                                                                                 li Google Maps
-                                                                                li Cypher Query
                                                         .right &nbsp;
                                                 .block
                                                         .left &nbsp;
@@ -220,7 +217,6 @@ html
                                                                         ul.skills
                                                                                 li Titan Graph
                                                                                 li Gremlin
-                                                                                li Groovy
                                                                                 li Spark
                                                                                 li SolR
                                                                                 li Python
@@ -242,7 +238,7 @@ html
                                                                         ul.skills
                                                                                 li Python
                                                                                 li Angular.js
-                                                                                li Golang
+                                                                                li Go
                                                                                 li C
                                                                                 li MongoDB
                                                                                 li Elasticsearch
@@ -295,7 +291,9 @@ html
                                 section#footer
                                         .quote When we are no longer able to change a situation, we are challenged to change ourselves.
                                         .note
-                                                |  Have an opportunity? Contact information is available at top. 
+                                                |  Have an opportunity? Drop an email at 
+                                                a(href='mailto:aroraabhay@icloud.com') aroraabhay@icloud.com
+                                                | .
                                                 span.no-print Press CTRL+P and save As PDF.
 
                 script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts.js')
